--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   &__left {
-    background-color: rgb(220, 220, 220);
+    background-color: #FAF8F0;
     width: 30%;
     height: 90vh;
     padding: 1rem 0.5rem;
