add basic header and footer

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -4,7 +4,7 @@
   &__left {
     background-color: #FAF8F0;
     width: 30%;
-    height: 90vh;
+    height: fill;
     padding: 1rem 0.5rem;
     display: flex;
     flex-direction: column;
