--- a/src/components/StoreCard/StoreCard.scss
+++ b/src/components/StoreCard/StoreCard.scss
@@ -8,13 +8,15 @@
   padding-bottom: 1rem;
   background-color: none;
   transition: background-color 2s;
-  border-radius: 0.75rem;
+  // border-radius: 0.75rem;
+  border-bottom: solid $rat-hover 1px;
   &:hover {
     background-color: #fdf8e3;
   }
 
   &__link {
     text-decoration: none;
+    color: $rat-black;
     &:visited {
       color: $rat-black;
     }
