--- a/src/styles/partials/typography.scss
+++ b/src/styles/partials/typography.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: k-font;
   src: url(./assets/fonts/k-font-400-regular.otf) format('opentype');
+  font-style: normal;
   font-weight: 400;
 }
 @font-face {
