improve styling of map icons, map list of stores using stores state data, build logic for alerts helper function that StoreList map will use

--- a/src/components/UserMap/UserMap.scss
+++ b/src/components/UserMap/UserMap.scss
@@ -1,7 +1,21 @@
 .map {
   height: 100%;
-
-  &__grade-marker {
+  &__store {
+    display: flex;
     background-color: white;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
+    &:hover {
+      background-color: #7294dc;
+      color: white;
+    }
+  }
+  &__grade {
+    border-radius: 10%;
+  }
+  &__business-name {
+    font-weight: 300;
   }
 }
