--- a/src/components/UserMap/UserMap.scss
+++ b/src/components/UserMap/UserMap.scss
@@ -2,7 +2,7 @@
   height: 100%;
   &__store {
     display: flex;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
     align-items: center;
     gap: 0.5rem;
     padding: 0.25rem 0.5rem;
