--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,7 +1,7 @@
 .main-container {
   display: flex;
   justify-content: space-between;
-  height: 87vh;
+  height: calc(100vh - (7rem + 3.5rem));
   &__left {
     background-color: #faf8f0;
     width: 30%;
