--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,22 +5,38 @@
   justify-content: space-between;
   height: 3.5rem;
   border-bottom: solid 3px rgb(241, 241, 241);
+  align-items: center;
 
-  &__logo {
-    height: 2.5rem;
-  }
-  &__left,
   &__right {
     display: flex;
-    align-items: flex-end;
+    justify-content: space-between;
     // gap: 1rem;
     padding: 0.5rem;
+    width: 70%;
+  }
+  &__logo {
+    height: 2.5rem;
+    padding-right: 3rem;
+  }
+  &__search {
+    width: 40%;
+    align-self: center;
+    &-field {
+      // display: inline;
+      height: 2rem;
+      width: 100%;
+    }
   }
   &__menu {
     list-style: none;
+    width: 60%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
     &-item {
       display: inline;
-      padding: 0 0.5rem;
+      padding: 0 1rem 0.4rem;
+      // z-index: 10;
       &:hover {
         border-bottom: solid 3px rgb(192, 192, 192);
       }
