--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -1,4 +1,4 @@
 $rat-black: rgb(54, 54, 54);
 $rat-hover: #8f8f8f;
-$rat-light: #FAF8F0;
-$rat-alert: #F07B7B;
+$rat-light: #faf8f0;
+$rat-alert: #f07b7b;
