--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,7 +6,9 @@
   height: 3.5rem;
   border-bottom: solid 3px rgb(241, 241, 241);
   align-items: center;
-
+  &__left {
+    padding: 0 0.5rem;
+  }
   &__right {
     display: flex;
     justify-content: space-between;
@@ -25,6 +27,9 @@
       // display: inline;
       height: 2rem;
       width: 100%;
+      border-radius: 0.5rem;
+      border: solid 1px rgb(192, 192, 192);
+      text-indent: 1rem;
     }
   }
   &__menu {
