--- a/src/components/StoreDetails/StoreDetails.scss
+++ b/src/components/StoreDetails/StoreDetails.scss
@@ -11,5 +11,29 @@
   width: 90vw;
   height: 75vh;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.7);
-  padding: 2rem;
+  padding: 2rem 4rem 0;
+  overflow: auto;
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__grade-img {
+    height: 6rem;
+  }
+  &__violations {
+    height: 80%;
+    overflow-y: scroll;
+    &-list {
+      padding: 1rem 2rem;
+      &-item {
+        padding: 0.25rem 0;
+      }
+    }
+  }
+  &__bottom {
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+  }
 }
