--- a/src/components/StoreDetails/StoreDetails.scss
+++ b/src/components/StoreDetails/StoreDetails.scss
@@ -13,10 +13,13 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.7);
   padding: 2rem 4rem 0;
   overflow: auto;
+  // opacity: 0;
+  animation: fadeIn 0.35s forwards;
   &__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 10%;
   }
   &__grade-img {
     height: 6rem;
@@ -24,6 +27,10 @@
   &__violations {
     height: 80%;
     overflow-y: scroll;
+    &-date {
+      font-size: 1.25rem;
+      font-weight: 600;
+    }
     &-list {
       padding: 1rem 2rem;
       &-item {
@@ -34,6 +41,17 @@
   &__bottom {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding-top: 1rem;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -25%); /* optional: slide up effect */
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
   }
 }
