--- a/src/components/StoreDetails/StoreDetails.scss
+++ b/src/components/StoreDetails/StoreDetails.scss
@@ -22,7 +22,7 @@
     height: 10%;
   }
   &__grade-img {
-    height: 6rem;
+    width: 6rem;
   }
   &__violations {
     height: 80%;
@@ -32,7 +32,7 @@
       font-weight: 600;
     }
     &-list {
-      padding: 1rem 2rem;
+      padding: 1rem 6rem 1rem 2rem;
       &-item {
         padding: 0.25rem 0;
       }
