add breakpoints for mobile layout, implement styling for mobile, improve store details exit button, remove extra map icons along bottom of component

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,10 +1,13 @@
 @use "../../styles/partials/variables.scss" as *;
-
+@use "../../styles/partials/mixins.scss" as *;
 .footer {
-  display: flex;
-  justify-content: center;
-  background-color: $rat-light;
-  &__logo {
-    width: 7rem;
+  display: none;
+  @include tablet {
+    display: flex;
+    justify-content: center;
+    background-color: $rat-light;
+    &__logo {
+      width: 7rem;
+    }
   }
 }
