--- a/src/components/StoreDetails/StoreDetails.scss
+++ b/src/components/StoreDetails/StoreDetails.scss
@@ -1,4 +1,5 @@
 @use "../../styles/partials/variables.scss" as *;
+@use "../../styles/partials/mixins.scss" as *;
 
 .store-details {
   position: absolute;
@@ -42,7 +43,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 1rem;
+    padding: 1.25rem 0 1.25rem;
+    height: 10%;
+  }
+  &__btn {
+    background-color: #0058a9;
+    text-decoration: none;
+    color: white;
+    border-radius: 0.5rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @include tablet {
+    }
   }
 }
 @keyframes fadeIn {
