adjust margins of store list table head items, add rat logo to mobile view

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,5 @@
 @use "../../styles/partials/typography.scss" as *;
+@use "../../styles/partials/mixins.scss" as *;
 
 .header {
   display: flex;
@@ -21,8 +22,12 @@
     padding-right: 3rem;
   }
   &__search {
-    width: 40%;
     align-self: center;
+    width: 100%;
+    max-width: 22rem;
+    @include tablet {
+      width: 40%;
+    }
     &-field {
       // display: inline;
       height: 2rem;
@@ -33,11 +38,15 @@
     }
   }
   &__menu {
-    list-style: none;
-    width: 60%;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
+    display: none;
+    width: 0;
+    @include tablet {
+      list-style: none;
+      width: 60%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: flex-end;
+    }
     &-item {
       display: inline;
       padding: 0 1rem 0.4rem;
