--- a/src/components/StoreDetails/StoreDetails.scss
+++ b/src/components/StoreDetails/StoreDetails.scss
@@ -57,6 +57,10 @@
     justify-content: center;
     align-items: center;
     @include tablet {
+      width: 50%;
+    }
+    &:hover {
+      background-color: #056ed1;
     }
   }
 }
