--- a/src/components/StoreList/StoreList.scss
+++ b/src/components/StoreList/StoreList.scss
@@ -1,6 +1,17 @@
 @use "../../styles/partials/variables.scss" as *;
+@use "../../styles/partials/mixins.scss" as *;
 
 .store-list {
+  &__table-head {
+    border-bottom: solid rgb(192, 192, 192) 1px;
+    display: flex;
+    justify-content: space-between;
+    &-left-side {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  }
   &__title {
     padding-bottom: 0.5rem;
   }
@@ -10,8 +21,9 @@
     align-items: baseline;
     font-size: 0.75rem;
     padding: 0.25rem 0;
-    padding-bottom: 1rem;
-    border-bottom: solid rgb(192, 192, 192) 1px;
+    @include tablet {
+      // padding-bottom: 1rem;
+    }
     &-item {
       text-decoration: none;
       color: grey;
@@ -26,6 +38,12 @@
         border: solid rgb(192, 192, 192) 1px;
         border-radius: 0.5rem;
       }
+    }
+  }
+  &__mobile-logo {
+    height: 4.5rem;
+    @include tablet {
+      display: none;
     }
   }
 }
