--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -12,12 +12,12 @@
   }
   &__left {
     background-color: $rat-light;
-    padding: 1rem 0.5rem;
+    padding: 0 0.5rem;
     display: flex;
     flex-direction: column;
     overflow: scroll;
     overflow-x: hidden;
-    height: 40%;
+    height: 50%;
     order: 1;
     border-top: solid rgb(192, 192, 192) 8px;
     @include tablet {
@@ -28,7 +28,7 @@
   }
   &__right {
     width: 100%;
-    height: 60%;
+    height: 50%;
     @include tablet {
       background-image: url("../../assets/map-placeholder.jpg");
       width: 70%;
