--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -21,6 +21,7 @@
     order: 1;
     border-top: solid rgb(192, 192, 192) 8px;
     @include tablet {
+      border-top: none;
       width: 30%;
       order: 0;
       height: 100%;
