--- a/src/components/UserMapRatZone/UserMapRatZone.scss
+++ b/src/components/UserMapRatZone/UserMapRatZone.scss
@@ -5,10 +5,8 @@
     padding: 0.5rem 0.5rem;
     border-radius: 50%;
     opacity: 0.75;
-    &:hover {
-      background-color: #7294dc;
-      color: white;
-    }
+    animation: pulse 0.25s ease-in-out forwards,
+      disappear 0.5s ease-in-out 0.5s forwards;
   }
   &__grade {
     border-radius: 10%;
@@ -40,4 +38,28 @@ a[href^="https://maps.google.com/maps"]
 }
 .gmnoprint div {
   background: none;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 0.75;
+  }
+  50% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+@keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
