--- a/src/pages/RatZonePage/RatZonePage.scss
+++ b/src/pages/RatZonePage/RatZonePage.scss
@@ -20,10 +20,16 @@
     width: 100%;
     height: 50%;
     @include tablet {
-      background-image: url("../../assets/map-placeholder.jpg");
       width: 100%;
       height: 100%;
     }
+  }
+  &__loading-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
   }
 }
 .ratzone-footer {
